CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(lkCommon)

INCLUDE(FindPkgConfig)


ADD_DEFINITIONS(-std=c++1y)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
ADD_DEFINITIONS(-O0 -ggdb -D_DEBUG)
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")


SET(LKCOMMON_ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
SET(LKCOMMON_OUTPUT_DIRECTORY ${LKCOMMON_ROOT_DIRECTORY}/bin)
SET(LKCOMMON_DIRECTORY ${LKCOMMON_ROOT_DIRECTORY}/lkCommon)

SET(LKCOMMON_TARGET lkCommon)
SET(LKCOMMON_TEST_TARGET lkCommonTest)


MACRO(LKCOMMON_COPY_RESULT TARGET)
    ADD_CUSTOM_COMMAND(TARGET ${TARGET} POST_BUILD COMMAND
                       ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${TARGET}> ${LKCOMMON_OUTPUT_DIRECTORY})
ENDMACRO(LKCOMMON_COPY_RESULT)


ADD_SUBDIRECTORY(lkCommon)

IF(DEFINED LKCOMMON_BUILD_TEST)
    ADD_SUBDIRECTORY(Deps)
    ADD_SUBDIRECTORY(lkCommonTest)
ENDIF(DEFINED LKCOMMON_BUILD_TEST)


FILE(MAKE_DIRECTORY ${LKCOMMON_OUTPUT_DIRECTORY})
